--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Rwandan restaurant, Burare Town, Huye District, local cuisine, grilled meats, plantains">
     <meta name="author" content="Burare Flavors Restaurant">
     <title>Burare Flavors - Authentic Rwandan Cuisine | Huye District</title>
+    <link rel="icon" type="image/jpeg" href="public/logo.jpg">
     <link rel="stylesheet" href="styles.css">
     <!-- Added Font Awesome CDN for real icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
