--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
-            <div class="nav-logo">
-                <h2>Burare Flavors</h2>
+            <div class="nav-logo" style="display:flex;align-items:center;">
+                <img src="public/logo.jpg" alt="Burare Flavors Logo" class="logo-img" style="height:48px;width:48px;margin-right:12px;vertical-align:middle;border-radius:50%;object-fit:cover;box-shadow:0 2px 8px rgba(0,0,0,0.08);">
+                <h2 style="display:inline-block;vertical-align:middle;margin:0;">Burare Flavors</h2>
             </div>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link active" data-section="home">Home</a></li>
