--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Burare Flavors - Authentic Rwandan cuisine in Huye District, Burare Town. Fresh, local ingredients with modern presentation.">
-    <meta name="keywords" content="Rwandan restaurant, Burare Town, Huye District, local cuisine, grilled meats, plantains">
-    <meta name="author" content="Burare Flavors Restaurant">
-    <title>Burare Flavors - Authentic Rwandan Cuisine | Huye District</title>
+    <meta name="description" content="Butare Flavors - Authentic Rwandan cuisine in Huye District, Butare Town. Fresh, local ingredients with modern presentation.">
+    <meta name="keywords" content="Rwandan restaurant, Butare Town, Huye District, local cuisine, grilled meats, plantains">
+    <meta name="author" content="Butare Flavors Restaurant">
+    <title>Butare Flavors - Authentic Rwandan Cuisine | Huye District</title>
     <link rel="icon" type="image/jpeg" href="public/logo.jpg">
     <link rel="stylesheet" href="styles.css">
     <!-- Added Font Awesome CDN for real icons -->
@@ -20,8 +20,8 @@
     <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <div class="nav-logo" style="display:flex;align-items:center;">
-                <img src="public/logo.jpg" alt="Burare Flavors Logo" class="logo-img" style="height:48px;width:48px;margin-right:12px;vertical-align:middle;border-radius:50%;object-fit:cover;box-shadow:0 2px 8px rgba(0,0,0,0.08);">
-                <h2 style="display:inline-block;vertical-align:middle;margin:0;">Burare Flavors</h2>
+                <img src="public/logo.jpg" alt="Butare Flavors Logo" class="logo-img" style="height:48px;width:48px;margin-right:12px;vertical-align:middle;border-radius:50%;object-fit:cover;box-shadow:0 2px 8px rgba(0,0,0,0.08);">
+                <h2 style="display:inline-block;vertical-align:middle;margin:0;">Butare Flavors</h2>
             </div>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link active" data-section="home">Home</a></li>
@@ -51,9 +51,9 @@
         <section id="home" class="section active">
             <div class="hero-slider">
                 <div class="slide active">
-                    <img src="/public/beautiful-restaurant-interior-with-traditional-rwa.png?height=600&width=1200" alt="Burare Flavors restaurant exterior">
+                    <img src="/public/beautiful-restaurant-interior-with-traditional-rwa.png?height=600&width=1200" alt="Butare Flavors restaurant exterior">
                     <div class="slide-content">
-                        <h1>Welcome to Burare Flavors</h1>
+                        <h1>Welcome to Butare Flavors</h1>
                         <p>Authentic Rwandan cuisine with a modern twist</p>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     <img src="/public/happy-customers-enjoying-meal-at-outdoor-terrace-w.png?height=600&width=1200" alt="Restaurant interior ambiance">
                     <div class="slide-content">
                         <h1>Warm Rwandan Hospitality</h1>
-                        <p>Experience the heart of Burare Town</p>
+                        <p>Experience the heart of Butare Town</p>
                     </div>
                 </div>
                 <!-- Replaced arrow symbols with Font Awesome chevron icons -->
@@ -85,7 +85,7 @@
                 <div class="container">
                     <div class="welcome-content">
                         <h2>Our Story</h2>
-                        <p>Nestled in the heart of Burare Town, Huye District, Rwanda, Burare Flavors brings you the authentic taste of Rwanda with a contemporary presentation. Our commitment to fresh, local ingredients and traditional cooking methods creates an unforgettable dining experience that celebrates Rwandan hospitality.</p>
+                        <p>Nestled in the heart of Butare Town, Huye District, Rwanda, Butare Flavors brings you the authentic taste of Rwanda with a contemporary presentation. Our commitment to fresh, local ingredients and traditional cooking methods creates an unforgettable dining experience that celebrates Rwandan hospitality.</p>
                         <button class="cta-btn" id="order-now-btn">Order Now</button>
                     </div>
                 </div>
@@ -95,10 +95,10 @@
         <!-- About Section -->
         <section id="about" class="section">
             <div class="container">
-                <h2 class="section-title">About Burare Flavors</h2>
+                <h2 class="section-title">About Butare Flavors</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>Located in the vibrant Burare Town of Huye District, Rwanda, Burare Flavors has been serving authentic Rwandan cuisine since our founding. We pride ourselves on sourcing the finest local ingredients and supporting our community farmers.</p>
+                        <p>Located in the vibrant Butare Town of Huye District, Rwanda, Butare Flavors has been serving authentic Rwandan cuisine since our founding. We pride ourselves on sourcing the finest local ingredients and supporting our community farmers.</p>
                         <p>Our commitment extends beyond great food - we're dedicated to preserving Rwandan culinary traditions while embracing modern cooking techniques to create memorable dining experiences.</p>
                     </div>
                     <div class="map-container">
@@ -110,7 +110,7 @@
                             allowfullscreen="" 
                             loading="lazy" 
                             referrerpolicy="no-referrer-when-downgrade"
-                            title="Burare Flavors location in Huye District, Rwanda">
+                            title="Butare Flavors location in Huye District, Rwanda">
                         </iframe>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     <div class="timeline-item" data-year="2018">
                         <div class="timeline-content">
                             <h4>Restaurant Founded</h4>
-                            <p>Opened our doors in Burare Town with a vision to showcase authentic Rwandan flavors.</p>
+                            <p>Opened our doors in Butare Town with a vision to showcase authentic Rwandan flavors.</p>
                         </div>
                     </div>
                     <div class="timeline-item" data-year="2020">
@@ -197,7 +197,7 @@
                         <div class="contact-item">
                             <!-- Replaced emoji with Font Awesome location icon -->
                             <h3><i class="fas fa-map-marker-alt"></i> Address</h3>
-                            <p>Burare Town, Huye District<br>Southern Province, Rwanda</p>
+                            <p>Butare Town, Huye District<br>Southern Province, Rwanda</p>
                         </div>
                         <div class="contact-item">
                             <!-- Replaced emoji with Font Awesome phone icon -->
@@ -252,8 +252,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Burare Flavors</h3>
-                    <p>Authentic Rwandan cuisine in the heart of Burare Town</p>
+                    <h3>Butare Flavors</h3>
+                    <p>Authentic Rwandan cuisine in the heart of Butare Town</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
@@ -276,7 +276,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Burare Flavors. All rights reserved. | Huye District, Rwanda</p>
+                <p>&copy; 2024 Butare Flavors. All rights reserved. | Huye District, Rwanda</p>
             </div>
         </div>
     </footer>
