--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Rwandan restaurant, Butare Town, Huye District, local cuisine, grilled meats, plantains">
     <meta name="author" content="Butare Flavors Restaurant">
     <title>Butare Flavors - Authentic Rwandan Cuisine | Huye District</title>
-    <link rel="icon" type="image/jpeg" href="public/logo.jpg">
+    <link rel="icon" type="image/jpeg" href="assets/logo.jpg">
     <link rel="stylesheet" href="styles.css">
     <!-- Added Font Awesome CDN for real icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -20,7 +20,7 @@
     <nav class="navbar" id="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <div class="nav-logo" style="display:flex;align-items:center;">
-                <img src="public/logo.jpg" alt="Butare Flavors Logo" class="logo-img" style="height:48px;width:48px;margin-right:12px;vertical-align:middle;border-radius:50%;object-fit:cover;box-shadow:0 2px 8px rgba(0,0,0,0.08);">
+                <img src="assets/logo.jpg" alt="Butare Flavors Logo" class="logo-img" style="height:48px;width:48px;margin-right:12px;vertical-align:middle;border-radius:50%;object-fit:cover;box-shadow:0 2px 8px rgba(0,0,0,0.08);">
                 <h2 style="display:inline-block;vertical-align:middle;margin:0;">Butare Flavors</h2>
             </div>
             <ul class="nav-menu" id="nav-menu">
@@ -51,21 +51,21 @@
         <section id="home" class="section active">
             <div class="hero-slider">
                 <div class="slide active">
-                    <img src="/public/beautiful-restaurant-interior-with-traditional-rwa.png?height=600&width=1200" alt="Butare Flavors restaurant exterior">
+                    <img src="/assets/beautiful-restaurant-interior-with-traditional-rwa.png?height=600&width=1200" alt="Butare Flavors restaurant exterior">
                     <div class="slide-content">
                         <h1>Welcome to Butare Flavors</h1>
                         <p>Authentic Rwandan cuisine with a modern twist</p>
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="/public/elegant-plated-dish-with-grilled-meat--vegetables-.png?height=600&width=1200" alt="Traditional Rwandan grilled meat dish">
+                    <img src="/assets/elegant-plated-dish-with-grilled-meat--vegetables-.png?height=600&width=1200" alt="Traditional Rwandan grilled meat dish">
                     <div class="slide-content">
                         <h1>Fresh Local Ingredients</h1>
                         <p>Grilled meats, plantains, and aromatic spices</p>
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="/public/happy-customers-enjoying-meal-at-outdoor-terrace-w.png?height=600&width=1200" alt="Restaurant interior ambiance">
+                    <img src="/assets/happy-customers-enjoying-meal-at-outdoor-terrace-w.png?height=600&width=1200" alt="Restaurant interior ambiance">
                     <div class="slide-content">
                         <h1>Warm Rwandan Hospitality</h1>
                         <p>Experience the heart of Butare Town</p>
