--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
                         <div class="contact-item">
                             <!-- Replaced emoji with Font Awesome phone icon -->
                             <h3><i class="fas fa-phone"></i> Phone</h3>
-                            <p>+250 788 123 456</p>
+                            <p>+250 792 648 647</p>
                         </div>
                         <div class="contact-item">
                             <!-- Replaced emoji with Font Awesome envelope icon -->
                             <h3><i class="fas fa-envelope"></i> Email</h3>
-                            <p>info@burareflavors.rw</p>
+                            <p>kamikazikayirangalelia@gmail.com</p>
                         </div>
                         <div class="contact-item">
                             <!-- Replaced emoji with Font Awesome clock icon -->
